# emulators

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CITATION.cff  Dockerfile  README.md  doc_requirements.txt  inspect_frechet.ipynb  mkdocs.yml  pyproject.toml  stefano_error_to_reproduce.py  test_dependency_versions.py  test_dependency_versions.sh  test_requirements.txt  versions.json
.github/ISSUE_TEMPLATES/: bug_report.md  issue_template.md
.github/workflows/: actions.yml  lint_test.yml  publish.yml  publish_emu_base.yml  publish_emu_mps.yml  publish_emu_sv.yml
.gitlab/issue_templates/: epic.md
1.2.2/: 404.html  index.html  objects.inv
1.2.2/CODE_OF_CONDUCT/: index.html
1.2.2/CONTRIBUTING/: index.html
1.2.2/advanced/: index.html
1.2.2/api/: index.html
1.2.2/base_classes/: index.html
1.2.2/benchmarks/: index.html
1.2.2/notebooks/: index.html
1.2.2/observables/: index.html
1.2.2/search/: search_index.json
2.4.0/: 404.html  index.html
2.4.0/CODE_OF_CONDUCT/: index.html
2.4.0/CONTRIBUTING/: index.html
2.4.0/base_classes/: index.html
2.4.0/emu_mps/: index.html
2.4.0/emu_sv/: index.html
2.4.0/observables/: index.html
2.4.0/search/: search_index.json
benchmarks/: download_and_benchmark.sh
benchmarks/adiabatic_afm_state_cpu/: benchmark.py  emuct_run.py  sbatch.config
benchmarks/adiabatic_afm_state_gpu/: benchmark.py  emuct_run.py  sbatch.config
benchmarks/afm_state_fidelity/: benchmark.py
benchmarks/afm_state_fidelity_with_noise/: benchmark.py
benchmarks/framework/: benchmarks.sh  dir_utils.sh  network.sh  pyproject.toml  runner.sh
benchmarks/framework/benchmarkutils/: parseutils.py  plotutils.py  pulserutils.py  sequenceutils.py
benchmarks/qubit_shuffling_cpu/: benchmark.py  emuct_run.py
benchmarks/quench_fidelity/: benchmark.py  sbatch.config
benchmarks/quench_perf_obs_cpuVSgpu/: emuct_run.py
benchmarks/quench_performance_cpu/: benchmark.py  emuct_run.py
benchmarks/quench_performance_gpu/: benchmark.py  emuct_run.py  sbatch.config
bug/: test.py  test_bug.py
ci/emu_base/: .gitlab-ci.yml  gitlab-ci-publish.yml  pyproject.toml
ci/emu_mps/: .gitlab-ci.yml  gitlab-ci-benchmarks.yml  gitlab-ci-publish.yml  pyproject.toml
ci/emu_mps/benchmarks/framework/: pyproject.toml
ci/emu_mps/benchmarks/framework/benchmarkutils/: plotutils.py  pulserutils.py  sequenceutils.py
ci/emu_sv/: pyproject.toml
cpp/: README.md
cpp/include/: core.hpp  cuda_kernels.cuh  evolve_single.hpp
cpp/lib/: README.md
cpp/src/: core.cpp  cuda_kernels.cu  evolve_single.cpp  python_bindings.cpp
docs/: CONTRIBUTING.md  api.md  base_classes.md  config.md  index.md  ising_MPO.ipynb  observables.md
docs/advanced/: config.md  convergence.md  errors.md  hamiltonian.md  index.md  memory.md  noise.md  resource_estimation.md  tdvp.md
docs/api/: index.md
docs/benchmarks/: accuracy.md  index.md  noise.md  performance.md
docs/developer/: ising_MPO.ipynb
docs/emu_mps/: api.md  index.md
docs/emu_sv/: api.md  index.md
docs/notebooks/: getting_started.ipynb  index.md  noise.ipynb
emu_base/: __init__.py  aggregators.py  constants.py  jump_lindblad_operators.py  lindblad_operators.py  noise.py  pulser_adapter.py  utils.py
emu_base/base_classes/: aggregators.py  callback.py  config.py  default_callbacks.py  operator.py  results.py
emu_base/math/: double_krylov.py  krylov_energy_min.py  krylov_exp.py  packed_tensor.py  pchip_torch.py
emu_ct/: MPSBackend.py  MPSConfig.py  MPSbackend.py  __init__.py  algebra.py  config.py  hamiltonian.py  mpo.py  mps.py  mps_backend.py  mps_config.py  noise.py  operations.py  pulser_adapter.py  qubit_position.py  register.py  results.py  tdvp.py  tensor_descriptor.py  utils.py
emu_ct/base_classes/: backend.py  callback.py  callbacks.py  common.py  config.py  default_callbacks.py  operator.py  state.py
emu_ct/cruft/: tensor_descriptor.py
emu_ct/math/: brents_root_finding.py  krylov_exp.py
emu_jax/: README.md  __init__.py  jax_backend.py
emu_mps/: __init__.py  algebra.py  baths.py  custom_callback_implementations.py  custom_callbacks.py  dmrg.py  hamiltonian.py  mpo.py  mps.py  mps_backend.py  mps_backend_impl.py  mps_config.py  observables.py  permutators.py  pulser_adapter.py  results.py  solver.py  solver_utils.py  tdvp.py  utils.py
emu_mps/base_classes/: backend.py  callback.py  config.py  default_callbacks.py  operator.py  results.py  state.py
emu_mps/math/: brents_root_finding.py  krylov_exp.py
emu_mps/optimatrix/: __about__.py  (+3 more)
emu_sv/: __init__.py  common_func.py  custom_applies.py  custom_callback_implementations.py  dense_operator.py  density_matrix_state.py  emulation_model.py  hamiltonian.py  lindblad_operator.py  sparse_operator.py  state_vector.py  sv_backend.py  sv_backend_impl.py  sv_config.py  time_evolution.py  utils.py
examples/: getting_started.ipynb  interaction_matrix.py  mpo_mps.py  mpo_mps_apply.py  phase_complex_hamiltonian.ipynb
main/: 404.html  index.html  objects.inv
optimatrix/: README.md  __init__.py  optimiser.py  permutations.py
scripts/: doc_detector.py
test/: test_example.py
tests/: test_adapter.py  test_algebra.py  test_config.py  test_endtoend.py  test_hamiltonian.py  test_lindblad_operators.py  test_mpo.py  test_mps.py  test_mps_backend_impl.py  test_mps_config.py  test_noise.py  test_probabilitysample.py  test_tdvp.py  test_utils.py  utils_testing.py
v1.2.0/: 404.html  index.html
v1.2.2/: 404.html  index.html
v1.2.3/: 404.html  index.html
v1.2.4/: 404.html  index.html  objects.inv
v1.2.5/: 404.html  index.html
v1.2.6/: 404.html  index.html  objects.inv
v1.2.7/: 404.html  index.html
v2.0.0/: 404.html
v2.1.1/: 404.html  index.html
v2.2.0/: 404.html
v2.2.1/: objects.inv
v2.3.0/: 404.html  index.html
v2.4.0/: 404.html  index.html
v2.4.1/: 404.html  index.html  objects.inv
v2.4.3/: 404.html  index.html
v2.4.4/: 404.html
v2.5.1/: index.html
v2.6.0/: 404.html  index.html  objects.inv
v2.7.0/: objects.inv
v2.7.1/: 404.html  index.html
v2.7.2/: 404.html  index.html
v2.7.3/: 404.html  index.html  objects.inv
(+863 files in other folders)
