[build-system]
requires = ["setuptools>=74.1"]
build-backend = "setuptools.build_meta"

[project]
name = "emulators"
description = "Monorepo for emulation team products"
readme = "README.md"
authors = [
    { name = "Anton Quelle", email = "anton.quelle@pasqal.com"},
    { name = "Mauro Mendizabal", email="mauro.mendizabal-pico@pasqal.com" },
    { name = "Stefano Grava", email="stefano.grava@pasqal.com" },
    { name = "Pablo Le Henaff", email="pablo.le-henaff@pasqal.com" }
]
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers=[
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pulser-core==1.3.*",
  "torch==2.5.0"]  # The version in .pre-commit-config.yaml must match
dynamic = ["version"]

[tool.setuptools]
packages = ["emu_base", "emu_mps", "emu_sv"]
ext-modules = [{name = "emulators_cpp", sources = ["cpp/src/core.cpp", "cpp/src/python_bindings.cpp"], include-dirs = ["cpp/include", "/home/pablo/code/venv/lib64/python3.10/site-packages/torch/include", "/home/pablo/code/venv/lib64/python3.10/site-packages/torch/include/torch/csrc/api/include"], library-dirs=["/home/pablo/code/venv/lib64/python3.10/site-packages/torch/lib", "cpp/lib"], runtime-library-dirs=["/home/pablo/code/venv/lib64/python3.10/site-packages/torch/lib", "cpp/lib"], libraries=["emulators_cuda_kernels", "c10", "torch", "torch_cpu", "torch_cuda", "torch_python"], extra-compile-args=["-std=c++17", "-O3", "-D_GLIBCXX_USE_CXX11_ABI=0"], py-limited-api = true}]
# For debug: "-ggdb", "-O0",

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.flake8]
max-complexity = 18
max-line-length = 100
exclude = """
    .git,
    .venv,
"""
extend-ignore = """
    E203,
    W503,
    E731,
"""
ban-relative-imports = true

[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 90
combine_as_imports = true
balanced_wrapping = true
lines_after_imports = 2
include_trailing_comma = true
multi_line_output = 5

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
