[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchmarkutils"
description = "Benchmark utilities for Emu-mps"
version = "0.1"
dependencies = [
  "pulser==1.1.*",
  "matplotlib",
  "numpy",
  "qutip",
]

[tool.hatch.build.targets.wheel]
      packages = ["benchmarkutils"]
